# voxtral-rust

./: .editorconfig  .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
crates/voxtral/: Cargo.toml
crates/voxtral-cli/: Cargo.toml
crates/voxtral-cli/src/: main.rs
crates/voxtral/src/: audio.rs  constants.rs  conv.rs  decoder.rs  kv.rs  lib.rs  math.rs  mel.rs  model.rs  ops.rs  params.rs  pipeline.rs  stream.rs  tokenizer.rs  weights.rs
crates/voxtral/tests/: e2e_model_env.rs
docs/plans/: 2026-02-11-voxtral-rust-design.md
docs/research/: 2026-02-11-voxtral-c-research.md
