[workspace]
resolver = "2"
members = [
  "crates/voxtral",
  "crates/voxtral-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/liuxiaopai-ai/voxtral-rust"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(coverage)",
] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Keep the baseline friendly early on; we can tighten later.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
